<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_gravity="center"
    android:background="#fff">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:text="@string/DevelopedTXT"
            android:textColor="#2f333f"
            android:textSize="50sp"
            android:fontFamily="@font/flappybird_font"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/Developer"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="#2f333f"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/flappybird_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_gravity="center"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="desarrollador.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>
        
        <Button
            android:id="@+id/Close"
            android:text="@string/Close"
            android:textColor="#fff"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/flappybird_font"
            android:textSize="35sp"
            android:backgroundTint="#4A77A4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>