<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".GameOver">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/gameover"/>
        <!--CardView-->
        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="300dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="#E0D796"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_gravity="center">
                <!--SCORE-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:text="@string/ScoreTXT"
                            android:fontFamily="@font/flappybird_font"
                            android:textSize="50sp"
                            android:textColor="#FF7133"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/Score"
                            android:text="@string/Score"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/flappybird_font"
                            android:textSize="50sp"
                            android:textColor="#000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--BESTS-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:text="@string/HighScoreTXT"
                            android:fontFamily="@font/flappybird_font"
                            android:textSize="50sp"
                            android:textColor="#FF7133"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/HighScore"
                            android:text="@string/HighScore"
                            android:layout_marginTop="5dp"
                            android:textSize="50sp"
                            android:fontFamily="@font/flappybird_font"
                            android:textColor="#000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/PlayAgain"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/play"
            android:layout_marginTop="25dp"/>
        <Button
            android:id="@+id/Btn_Leave"
            android:text="@string/Btn_Leave"
            android:backgroundTint="#FF3346"
            android:textColor="#fff"
            android:fontFamily="@font/flappybird_font"
            android:textSize="35sp"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </androidx.appcompat.widget.LinearLayoutCompat>



</RelativeLayout>